# church-gpt

./: .gitignore  Gemma3_Fine_Tuning.ipynb  README.md  church_scraper.py  pyproject.toml  start_scraper.sh  test_church_scraper.py  test_conference_scraper.py  test_file_manager.py  test_integration.py  test_liahona_scraper.py  test_progress_logging.py  training_data_demo.jsonl  validate_integration_tests.py
.ipynb_checkpoints/: README-checkpoint.md  webscrape-checkpoint.ipynb
1990-04/: a-latter-day-samaritan.txt  a-little-child-shall-lead-them.txt  blessed-are-the-merciful.txt  choose-you-this-day.txt  conference-is-here.txt  endure-it-well.txt  family-traditions.txt  filling-the-whole-earth.txt  finding-the-way-back.txt  gratitude-as-a-saving-principle.txt  home-first.txt  i-will-go-and-do.txt  instruments-to-accomplish-his-purposes.txt  keeping-the-temple-holy.txt  member-finances-fireside-session.txt  my-brothers-keeper.txt  neither-boast-of-faith-nor-of-mighty-works.txt  one-small-step-for-a-man-one-giant-leap-for-mankind.txt  personal-integrity.txt  preparing-the-heart.txt  priesthood-session.txt  rise-to-a-larger-vision-of-the-work.txt  sacred-resolves.txt  saturday-afternoon-session.txt  saturday-morning-session.txt  small-and-simple-things.txt  some-scriptural-lessons-on-leadership.txt  standing-as-witnesses-of-god.txt  statistical-report-1989.txt  sunday-afternoon-session.txt  sunday-morning-session.txt  teach-them-correct-principles.txt  teachings-of-a-loving-father.txt  the-aaronic-priesthood-return-with-honor.txt  the-church-audit-committee-report.txt  (+11 more)
(+212 files in other folders)
