[project]
name = "church-gpt"
version = "0.1.0"
description = "A domain-aligned version of Gemma 3 7B fine-tuned on General Conference talks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core scraping dependencies (minimal by default)
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "transformers>=4.56.0",
    "torch>=2.8.0",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "scikit-learn>=1.6.1",
    "nltk>=3.9.1",
]

# Note: This project uses uv for dependency management
# Dependencies are added as needed using: uv add package-name
# Common dependency groups:
# - Scraping: requests beautifulsoup4
# - Model serving: torch transformers peft
# - API server: fastapi uvicorn
# - Testing: pytest pytest-cov



[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
